# python-go2rtc-client

./: .devcontainer.json  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CONTRIBUTING.md  renovate.json
.github/workflows/: ci.yaml  release.yaml
go2rtc_client/: __init__.py  client.py  exceptions.py  models.py  rest.py
go2rtc_client/ws/: __init__.py  client.py  messages.py
tests/: __init__.py  conftest.py  syrupy.py  test_client.py  test_rest.py
tests/__snapshots__/: test_client.ambr  test_rest.ambr
tests/fixtures/: application_info_answer.json  probe_camera_offline.txt  probe_success.json  streams_one.json  streams_without_producers.json  webrtc_answer.json
tests/ws/: test_client.py
