[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "go2rtc-client"
license     = {text = "Apache-2.0"}
description = "Python client for go2rtc"
readme      = "README.md"
authors     = [
    {name = "Robert Resch", email = "robert@resch.dev"}
]
keywords    = ["webrtc", "stream", "go2rtc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12.0"
dependencies = [
    "aiohttp~=3.10",
    "awesomeversion~=24.6",
    "mashumaro~=3.13",
    "orjson~=3.10",
    "webrtc-models~=0.1",
]
version = "0.0.0"

[project.urls]
"Homepage"    = "https://pypi.org/project/go2rtc-client"
"Source Code" = "https://github.com/home-assistant-libs/python-go2rtc-client"
"Bug Reports" = "https://github.com/home-assistant-libs/python-go2rtc-client/issues"

[tool.uv]
dev-dependencies = [
    "aioresponses>=0.7.6",
    "covdefaults>=2.3.0",
    "mypy-dev==1.13.0a2",
    "pre-commit==3.8.0",
    "pylint-per-file-ignores>=1.3.2",
    "pylint==3.3.1",
    "pytest-aiohttp>=1.0.5",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-timeout==2.3.1",
    "pytest==8.3.3",
    "syrupy>=4.7.1",
]


[tool.hatch.build.targets.sdist]
include = [
  "/go2rtc_client",
]


[tool.coverage.report]
show_missing = true
fail_under = 97

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["go2rtc_client"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.12"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "FBT001", # boolean-type-hint-positional-argument
    "N802",  # Function name {name} should be lowercase
    "N816",  # Variable {name} in global scope should not be mixedCase
    "PLR0913", # Too many arguments in function definition
    "S101",  # Use of assert detected
    "SLF001", # Private member accessed: {access}
    "T201",  # print found
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "_P",
  "_R",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "P",
  "R",
  "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint.MASTER]
load-plugins=[
    "pylint_per_file_ignores",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "duplicate-code",
  "format",
  "unsubscriptable-object",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-public-methods",
  "wrong-import-order",
]

per-file-ignores = [
    # redefined-outer-name: Tests reference fixtures in the test function
    "/tests/:redefined-outer-name",
]


[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
  "ANN101", # Self... explanatory
  "ANN102", # cls... just as useless
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "COM812", # Recommended to disable due conflicts with ruff format
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "ISC001", # Recommended to disable due conflicts with ruff format
  "PLR2004", # Just annoying, not really useful
  "PLR0913", # Too many arguments
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["go2rtc"]
force-sort-within-sections = true
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 25
